# breakout-engine

./: Cargo.toml  README.md
assets/: License.txt
audio/: Cargo.toml
audio/src/: audio.rs  audio_player.rs  lib.rs
core/: Cargo.toml
core/src/: asset_manager.rs  engine.rs  engine_context.rs  game_state.rs  input.rs  lib.rs  scene.rs  state.rs
core/src/components/: mod.rs  sprite.rs  transform2d.rs
examples/: breakout.rs  ecs.rs  empty.rs  menu.rs  physics2d.rs  pong.rs  quadtree.rs  snake.rs  texture_atlas.rs  tilemap.rs  ui.rs
font/: Cargo.toml
font/src/: main.rs
ogl/: Cargo.toml
ogl/src/: helper.rs  main.rs  shader.rs  sprite_renderer.rs  state.rs  texture.rs
physics2d/: Cargo.toml
physics2d/src/components/: physics.rs
physics2d/src/systems/: physics.rs
render/: Cargo.toml
render/src/: lib.rs  renderer.rs  texture.rs  window.rs
render/src/opengl/: mod.rs  render2d.rs  renderer2d.rs  sprite_renderer.rs  state.rs  texture.rs
render/src/wgpu/: camera.rs  mod.rs  pipeline.rs  state.rs  texture.rs  vertex.rs
shaders/: gl_render2d_shader.frag  gl_render2d_shader.vert  gl_shader.frag  gl_shader.vert  render2d_shader.frag  render2d_shader.vert  shader.frag  shader.vert
shapes/: Cargo.toml
shapes/src/: rectangle.rs
src/: camera.rs  error.rs  lib.rs  main.rs  pipeline.rs  prelude.rs  shader.frag  shader.vert  shader.wgsl  sprite.rs  state.rs  texture.rs  vertex.rs
src/audio/: audio_player.rs  mod.rs
src/core/: asset_manager.rs  engine.rs  engine_context.rs  game_context.rs  game_state.rs  game_window.rs  input.rs  mod.rs  scene.rs  ui_context.rs
src/core/components/: animated_sprite.rs  camera2d.rs  label.rs  mod.rs  sprite.rs  transform2d.rs
src/core/systems/: animated_sprite.rs  font.rs  mod.rs  sprite.rs
src/ecs/: component.rs  mod.rs  query.rs  world.rs
src/font/: mod.rs
src/gui/: button.rs  group.rs  label.rs  mod.rs  panel.rs  screen.rs  texture.rs
src/physics2d/: mod.rs  physics_world.rs
src/physics2d/components/: physics.rs
src/physics2d/systems/: physics.rs
src/render/: font.rs  mod.rs  render2d_data.rs  render2d_pipeline.rs  renderer.rs  subtexture.rs  texture.rs  vertex.rs  window.rs
src/render/opengl/: mod.rs  render2d_pipeline.rs  renderer2d.rs  shader.rs  sprite_renderer.rs  texture.rs  vertex.rs
src/render_old/: mod.rs
src/render_old/opengl/: mod.rs  renderer2d.rs  texture.rs
src/shapes/: rectangle.rs
src/tiled/: json_map.rs  mod.rs
wgpu_tests/: .gitignore  Cargo.toml
wgpu_tests/src/: game_window.rs  main.rs  render2d_pipeline.rs  renderer.rs  shader.frag  shader.vert  texture.rs  uniform.rs  vertex.rs
