[package]
name = "breakout_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "audio",
    "render",
    "shapes",
]

[dependencies]
anyhow = "1.0"
glam = "0.20.1"
hecs = "0.7.1"
image = "0.23"
log = "0.4.14"
pollster = "0.2"
pretty_env_logger = "0.4.0"
rand = "0.8.4"
winit = "0.26.0"
audio = { path = "./audio" }
physics2d = { path = "./physics2d" }
render = { path = "./render", default-features = false, features = ["opengl"] }
shapes = { path = "./shapes" }

[[example]]
name = "pong"
[[example]]
name = "snake"
[[example]]
name = "empty"

[profile.dev_shader]
inherits = "dev"