[package]
name = "breakout_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ab_glyph = "0.2.12"
anyhow = "1.0"
gl = "0.14.0"
glam = "0.20.1"
glutin = "0.28.0"
hecs = "0.7.1"
image = "0.23"
log = "0.4.14"
num-traits = "0.2.14"
pollster = "0.2"
pretty_env_logger = "0.4.0"
rand = "0.8.4"
rodio = "0.14.0"
winit = "0.26.0"
memoffset = "0.6.5"

[[example]]
name = "empty"
[[example]]
name = "menu"
[[example]]
name = "pong"
[[example]]
name = "snake"
[[example]]
name = "tilemap"

[profile.dev_shader]
inherits = "dev"