[package]
name = "breakout_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
freetype-rs = "0.29.0"
anyhow = "1.0"
glam = { version = "0.20.1", features = ['bytemuck'] }
hecs = "0.7.1"
image = "0.23"
log = "0.4.14"
num-traits = "0.2.14"
pretty_env_logger = "0.4.0"
rand = "0.8.4"
rodio = "0.14.0"
wgpu = { version = "0.12.0", features = ['spirv', 'angle'] }
winit = "0.26.0"
memoffset = "0.6.5"
shaderc = "0.7.4"
bytemuck = { version = "1.4", features = [ "derive" ] }
pollster = "0.2.5"

[[example]]
name = "empty"
[[example]]
name = "menu"
[[example]]
name = "physics2d"
[[example]]
name = "pong"
[[example]]
name = "snake"
[[example]]
name = "tilemap"
[[example]]
name = "texture_atlas"
[[example]]
name = "ui"

[profile.dev_shader]
inherits = "dev"