[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
pollster = "0.2"
winit = "0.26.0"
render = { path = "../render", default-features = false, features = ["opengl"] }
