[package]
name = "core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
anyhow = "1.0"
pollster = "0.2"
winit = "0.26.0"
hecs = "0.7.1"
glam = "0.20.1"
image = "0.23"
shapes = { path = "../shapes" }
render = { path = "../render", default-features = false, features = ["opengl"] }
