[package]
name = "render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
gl = { version = "0.14.0", optional = true}
glutin = { version = "0.28.0", optional = true}
wgpu = { version = "0.11.1", features = [ "spirv" ], optional = true }
bytemuck = { version = "1.4", features = [ "derive" ], optional = true }
glam = "0.20.1"
image = "0.23"
winit = "0.26.0"
shaderc = { version = "0.7.3", optional = true }


[features]
default = ["wgpu", "bytemuck", "shaderc"]
opengl = ["gl", "glutin"]
