[package]
name = "wgpu_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23"
winit = "0.26"
cgmath = "0.18"
env_logger = "0.9"
log = "0.4"
wgpu = { version = "0.12", features = ['spirv', 'angle'] }
pollster = "0.2"
shaderc = "0.7.4"
bytemuck = { version = "1.4", features = [ "derive" ] }
